--- a/frontend/src/static/ProductImage.module.css
+++ b/frontend/src/static/ProductImage.module.css
@@ -1,6 +1,6 @@
 .image {
     margin-left: 50px;
     margin-top: 150px;
-    max-width: 900px;
-    max-height: 500px;
+    width: 900px;
+    height: 500px;
 }
