--- a/frontend/src/static/AuthPage.module.css
+++ b/frontend/src/static/AuthPage.module.css
@@ -76,22 +76,36 @@
 }
 
 .enter {
+  display: inline-block;
   height: 55px;
   width: 150px;
   border-radius: 5px;
   border: 2px solid #000;
   cursor: pointer;
   background-color: transparent;
-  transition: 0.5s;
+  transition: background-color 0.5s, color 0.5s;
   text-transform: uppercase;
   font-size: 20px;
   letter-spacing: 2px;
   margin-bottom: 1em;
+  text-decoration: none;
+  text-align: center;
+  line-height: 55px;
 }
 
 .enter:hover {
-  background-color: rgb(0, 0, 0);
-  color: #3E84A3;
+  background-color: #000;
+  color: #fff;
 }
+
+.enter a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+  color: inherit;
+}
+
+
   
   
