--- a/frontend/src/static/AvatarSignUp.module.css
+++ b/frontend/src/static/AvatarSignUp.module.css
@@ -15,7 +15,7 @@
   .header {
     flex: 1;
     width: 100%;
-    border: 2px dashed royalblue;
+    border: 2px dashed white;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -80,7 +80,7 @@
   .header {
     flex: 1;
     width: 100%;
-    border: 2px dashed royalblue;
+    border: 2px dashed white;
     border-radius: 10px;
     display: flex;
     align-items: center;
